# creality_box_control

./: .devcontainer.json  .ruff.toml  CONTRIBUTING.md  Gemeni.md  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/creality_box_control/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  sensor.py  switch.py
custom_components/creality_box_control/translations/: en.json
scripts/: UpdateRunningVersion.ps1  debug  develop  run  setup
tests/: __init__.py  conftest.py  test___init__.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_data.py  test_entity.py  test_sensor.py
tests/fixtures/: mock_box_info.json
